--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .env
+# Ignore node_modules in the root
+/node_modules/
+
+# Ignore node_modules in frontend and backend folders
+/frontend/node_modules/
+/backend/node_modules/
