--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
+      "start-backend": "cd backend && node src/index.js",
+      "start-frontend": "cd frontend && npm start"
     },
     "keywords": [],
     "author": "",
