--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+  
+    "dev": "nodemon src/index.js",
+    
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+ 
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
