--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
-        "start-backend": "cd backend && node src/index.js",
-        "start-frontend": "cd frontend && npm start"
+      "postinstall": "npm install --prefix backend && npm install --prefix frontend",
+      
+
+      "build-frontend": "npm run build --prefix frontend",
+  
+
+      "start-backend": "npm run start --prefix backend",
+  
+
+      "start-frontend": "npm run start --prefix frontend",
+  
+      "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
+  
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "concurrently": "^9.1.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+      "concurrently": "^9.1.0"
     }
-}
+  }
+  
