--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "postinstall": "npm install --prefix backend && npm install --prefix frontend",
+      "postinstall": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
       
 
       "build-frontend": "npm run build --prefix frontend",
@@ -15,9 +15,7 @@
 
       "start-frontend": "npm run start --prefix frontend",
   
-      "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
-  
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node backend/src/index.js"
     },
     "keywords": [],
     "author": "",
