--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  
     "dev": "nodemon src/index.js",
-    
     "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
- 
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.9.0",
