--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.12.3",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "graphql": "^16.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
-    "serve": "^14.2.4",       
+    "serve": "^14.2.4",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -20,14 +21,24 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
-      ">0.2%", "not dead", "not op_mini all"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version", "last 1 firefox version", "last 1 safari version"
-    ]
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ],
+    "proxy": "http://localhost:4000"
+
+    
   }
 }
