--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^3.0.5",
     "serve": "^14.2.4",
     "web-vitals": "^4.2.4"
   },
