--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
+    "nodemailer": "^6.10.0",
     "stripe": "^17.4.0"
   },
   "devDependencies": {
