--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "develop" : "npm run build && npm run start"
   },
   "eslintConfig": {
     "extends": [
