--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "stripe": "^17.4.0"
   },
