--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,21 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-bootstrap": "^2.10.9",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^3.0.5",
-      "react-helmet-async": "^2.0.5",
     "serve": "^14.2.4",
+    "sitemap": "^8.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "serve -s build",
+    "prebuild": "node generate-sitemap.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
